<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">叉叉酷跑助手</string>
    <string name="mt_prefix">com.tencent.pao</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start MT!</string>
    <string name="start_button">开始游戏</string>
    <string name="check_update">请勿点击</string>
    <string name="mt_tip">吾爱破解论坛markac出品</string>
    <string name="mt_announcement">叉叉游戏助手公告</string>
    <string name="hello_world">Hello world!</string>
    <string name="mt_version_inf">版本：1.0.0</string>
    <string name="mt_weibo">\@叉叉游戏助手</string>
</resources>
