<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff969696" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/mt_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mt_tip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <FrameLayout android:id="@id/mt_check_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_below="@id/mt_tip">
        <Spinner android:id="@id/mt_spinner" android:background="@drawable/activity_main_mt_selector_bg" android:layout_width="fill_parent" android:layout_height="40.0dip" android:prompt="@string/app_name" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/mt_selected_version" android:paddingLeft="6.0dip" android:paddingTop="8.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/rushDistance" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/mt_check_version">
        <TextView android:textColor="#ffffffff" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="飞行距离：" android:layout_weight="1.0" />
        <EditText android:id="@id/et_rushDistance" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="点击输入飞行距离" android:singleLine="true" android:maxLength="6" android:numeric="integer" android:layout_weight="3.0" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/rg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/rushDistance">
        <TextView android:textColor="#ffffffff" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="奖励倍数：" android:layout_weight="1.0" />
        <EditText android:id="@id/et_bonus" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="点击输入表现分奖励倍数" android:singleLine="true" android:maxLength="4" android:numeric="integer" android:layout_weight="3.0" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/mt_button_ll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textColor="#ff5d3b98" android:id="@id/startButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/start_button" android:layout_weight="1.0" />
        <Button android:textColor="#ff5d3b98" android:id="@id/checkUpdate" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/check_update" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ff5d3b98" android:gravity="center" android:id="@id/mt_announcement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/mt_announcement" android:layout_below="@id/rg" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:layout_above="@id/mt_button_ll" android:layout_below="@id/mt_announcement">
        <TextView android:textColor="#ff810c86" android:id="@id/mt_announcement_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lineSpacingExtra="3.0dip" />
    </ScrollView>
</RelativeLayout>